# TaskManager

./: .gitignore  CMakeLists.txt
src/: Application.cpp  Application.h  BasicDefines.h  Config.cpp  Config.h  FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  Main.cpp  PythonApplication.cpp  PythonApplication.h  PythonApplicationModule.cpp  PythonApplicationModule.h
src/root/: application.py  main.py  utils.py
